--- a/app/src/main/res/layout/activity_second.xml
+++ b/app/src/main/res/layout/activity_second.xml
@@ -15,7 +15,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:ellipsize="start"
-        android:gravity="end"
+        android:layout_marginStart="15dp"
+        android:layout_marginEnd="24dp"
+        android:gravity="center|end"
         android:singleLine="true"
         android:textColor="@android:color/white"
         android:textSize="40sp" />
@@ -24,9 +26,11 @@
     <TextView
         android:id="@+id/ResultView"
         android:layout_width="match_parent"
-        android:layout_height="76dp"
+        android:layout_height="79dp"
+        android:layout_marginStart="24dp"
         android:ellipsize="end"
-        android:gravity="start"
+        android:layout_marginEnd="15dp"
+        android:gravity="start|center"
         android:singleLine="true"
         android:textColor="@android:color/white"
         android:textSize="45sp"
@@ -49,7 +53,7 @@
                 android:id="@+id/AC"
                 style="@style/ActionButton"
                 android:text="AC"
-                android:textColor="#FFBA2369" /> />
+                android:textColor="#BA2369" /> />
 
             <TextView
                 android:id="@+id/leftFrchxili"
@@ -154,7 +158,7 @@
                 android:id="@+id/gamokleba"
                 style="@style/ActionButton"
                 android:text="-"
-                android:textColor="#FB8E2E"
+                android:textColor="#FF8418"
                 android:textStyle="bold" />
 
         </LinearLayout>
@@ -185,7 +189,7 @@
                 style="@style/ActionButton"
                 android:background="#DFFFFFFF"
                 android:text="="
-                android:textColor="#FFBA2369"
+                android:textColor="#FA8218"
                 android:textStyle="bold" />
 
         </LinearLayout>
