--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,10 +3,11 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:orientation="vertical"
     android:layout_height="match_parent"
-    tools:context=".MainActivity"
     android:background="@drawable/gradient_background"
+    android:gravity="clip_horizontal"
+    android:orientation="vertical"
+    tools:context=".MainActivity"
     tools:ignore="ExtraText">
 
 
@@ -15,12 +16,15 @@
         android:layout_width="match_parent"
         android:layout_height="133dp"
         android:ellipsize="start"
-        android:gravity="end"
+        android:gravity="center|end"
         android:singleLine="true"
+        android:layout_marginEnd="26dp"
+        android:layout_marginStart="15dp"
         android:textAllCaps="false"
         android:textColor="#FFF"
         android:textIsSelectable="false"
-        android:textSize="39sp" />
+        android:textSize="40sp"
+        android:verticalScrollbarPosition="defaultPosition" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -37,19 +41,18 @@
             <TextView
                 android:id="@+id/AC"
                 style="@style/ActionButton"
-                android:layout_width="0dp"
-                android:onClick="ACClick"
+                android:layout_width="0.7dp"
                 android:layout_weight="1"
+                android:onClick="ACClick"
                 android:text="AC"
                 android:textColor="#FFBA2369" />
 
             <TextView
                 android:id="@+id/toSecondCalc"
                 style="@style/ActionButton"
-
-                android:layout_width="105dp"
-                android:text="Advanced"
-                android:textColor="#BC427A" />
+                android:layout_width="104dp"
+                android:text="Vol.2"
+                android:textColor="#D84489" />
 
             <TextView
                 android:id="@+id/division"
@@ -64,7 +67,7 @@
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="1"
-            android:orientation="horizontal" >
+            android:orientation="horizontal">
 
             <TextView
                 android:id="@+id/num7"
@@ -97,7 +100,7 @@
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="1"
-            android:orientation="horizontal" >
+            android:orientation="horizontal">
 
             <TextView
                 android:id="@+id/num4"
@@ -107,14 +110,14 @@
 
             <TextView
                 android:id="@+id/num5"
-                android:onClick="numberClick"
                 style="@style/NumberButton"
+                android:onClick="numberClick"
                 android:text="5" />
 
             <TextView
                 android:id="@+id/num6"
-                android:onClick="numberClick"
                 style="@style/NumberButton"
+                android:onClick="numberClick"
                 android:text="6" />
 
             <TextView
@@ -134,20 +137,20 @@
 
             <TextView
                 android:id="@+id/num1"
-                android:onClick="numberClick"
                 style="@style/NumberButton"
+                android:onClick="numberClick"
                 android:text="1" />
 
             <TextView
                 android:id="@+id/num2"
-                android:onClick="numberClick"
                 style="@style/NumberButton"
+                android:onClick="numberClick"
                 android:text="2" />
 
             <TextView
                 android:id="@+id/num3"
-                android:onClick="numberClick"
                 style="@style/NumberButton"
+                android:onClick="numberClick"
                 android:text="3" />
 
             <TextView
@@ -174,24 +177,24 @@
 
             <TextView
                 android:id="@+id/num0"
-                android:onClick="numberClick"
                 style="@style/NumberButton"
+                android:onClick="numberClick"
                 android:text="0" />
 
             <TextView
                 android:id="@+id/Back"
-                android:onClick="BackClick"
                 style="@style/NumberButton"
+                android:onClick="BackClick"
                 android:text="⌫" />
 
             <TextView
                 android:id="@+id/equalButton"
                 style="@style/ActionButton"
-                android:background="#DFFFFFFF"
+                android:background="#DDFFFFFF"
 
                 android:onClick="equalsClick"
                 android:text="="
-                android:textColor="#FFBA2369"
+                android:textColor="#FF9800"
                 android:textSize="30sp"
                 android:textStyle="bold" />
 
